Migrated to Spring Boot 3.0.1, maven 3.8.7